# controller/oauth.go
@@ -1,0 +1,105 @@
+package controller
+
+import (
+	"encoding/base64"
+	"github.com/dgrijalva/jwt-go"
+	"github.com/e421083458/gin_scaffold_study/dao"
+	"github.com/e421083458/gin_scaffold_study/dto"
+	"github.com/e421083458/gin_scaffold_study/middleware"
+	"github.com/e421083458/gin_scaffold_study/public"
+	"github.com/e421083458/gin_scaffold_study/golang_common/lib"
+	"github.com/gin-gonic/contrib/sessions"
+	"github.com/gin-gonic/gin"
+	"github.com/pkg/errors"
+	"strings"
+	"time"
+)
+
+type OAuthController struct{}
+
+func OAuthRegister(group *gin.RouterGroup) {
+	oauth := &OAuthController{}
+	group.POST("/tokens", oauth.Tokens)
+}
+
+// Tokens godoc
+// @Summary 获取TOKEN
+// @Description 获取TOKEN
+// @Tags OAUTH
+// @ID /oauth/tokens
+// @Accept  json
+// @Produce  json
+// @Param body body dto.TokensInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.TokensOutput} "success"
+// @Router /oauth/tokens [post]
+func (oauth *OAuthController) Tokens(c *gin.Context) {
+	params := &dto.TokensInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	splits := strings.Split(c.GetHeader("Authorization"), " ")
+	if len(splits) != 2 {
+		middleware.ResponseError(c, 2001, errors.New("用户名或密码格式错误"))
+		return
+	}
+
+	appSecret, err := base64.StdEncoding.DecodeString(splits[1])
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	//fmt.Println("appSecret", string(appSecret))
+
+	//  取出 app_id secret
+	//  生成 app_list
+	//  匹配 app_id
+	//  基于 jwt生成token
+	//  生成 output
+	parts := strings.Split(string(appSecret), ":")
+	if len(parts) != 2 {
+		middleware.ResponseError(c, 2003, errors.New("用户名或密码格式错误"))
+		return
+	}
+
+	appList := dao.AppManagerHandler.GetAppList()
+	for _, appInfo := range appList {
+		if appInfo.AppID == parts[0] && appInfo.Secret == parts[1] {
+			claims := jwt.StandardClaims{
+				Issuer:    appInfo.AppID,
+				ExpiresAt: time.Now().Add(public.JwtExpires * time.Second).In(lib.TimeLocation).Unix(),
+			}
+			token,err:=public.JwtEncode(claims)
+			if err != nil {
+				middleware.ResponseError(c, 2004, err)
+				return
+			}
+			output := &dto.TokensOutput{
+				ExpiresIn:public.JwtExpires,
+				TokenType:"Bearer",
+				AccessToken:token,
+				Scope:"read_write",
+			}
+			middleware.ResponseSuccess(c, output)
+			return
+		}
+	}
+	middleware.ResponseError(c, 2005,errors.New("未匹配正确APP信息"))
+}
+
+// AdminLogin godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *OAuthController) AdminLoginOut(c *gin.Context) {
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(c, "")
+}
